# newlib

./: .gitignore  CMakeLists.txt  newlib-config.cmake.in
cmake/: _newlib_version.h.in  newlib.h.in
newlib/libc/: CMakeLists.txt
newlib/libc/argz/: CMakeLists.txt
newlib/libc/ctype/: CMakeLists.txt
newlib/libc/errno/: CMakeLists.txt
newlib/libc/locale/: CMakeLists.txt
newlib/libc/machine/: CMakeLists.txt
newlib/libc/machine/x86_64/: CMakeLists.txt
newlib/libc/misc/: CMakeLists.txt
newlib/libc/reent/: CMakeLists.txt
newlib/libc/search/: CMakeLists.txt  hash_func.c
newlib/libc/signal/: CMakeLists.txt
newlib/libc/ssp/: CMakeLists.txt
newlib/libc/stdio/: CMakeLists.txt
newlib/libc/stdlib/: CMakeLists.txt
newlib/libc/string/: CMakeLists.txt
newlib/libc/time/: CMakeLists.txt  gettzinfo.c
newlib/libm/: CMakeLists.txt
newlib/libm/common/: CMakeLists.txt
newlib/libm/complex/: CMakeLists.txt
newlib/libm/machine/i386/: CMakeLists.txt
newlib/libm/math/: CMakeLists.txt
