add_library(ctype STATIC "")

target_include_directories(ctype
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
    PUBLIC
        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/newlib/libc/include>
        $<INSTALL_INTERFACE:include>
)

target_sources(ctype
    PRIVATE
        ctype_.c
        ctype_cp.h
        ctype_.h
        ctype_iso.h
        ctype.tex
        isalnum.c
        isalnum_l.c
        isalpha.c
        isalpha_l.c
        isascii.c
        isascii_l.c
        isblank.c
        isblank_l.c
        iscntrl.c
        iscntrl_l.c
        isdigit.c
        isdigit_l.c
        islower.c
        islower_l.c
        isprint.c
        isprint_l.c
        ispunct.c
        ispunct_l.c
        isspace.c
        isspace_l.c
        isupper.c
        isupper_l.c
        iswalnum.c
        iswalnum_l.c
        iswalpha.c
        iswalpha_l.c
        iswblank.c
        iswblank_l.c
        iswcntrl.c
        iswcntrl_l.c
        iswctype.c
        iswctype_l.c
        iswdigit.c
        iswdigit_l.c
        iswgraph.c
        iswgraph_l.c
        iswlower.c
        iswlower_l.c
        iswprint.c
        iswprint_l.c
        iswpunct.c
        iswpunct_l.c
        iswspace.c
        iswspace_l.c
        iswupper.c
        iswupper_l.c
        iswxdigit.c
        iswxdigit_l.c
        isxdigit.c
        isxdigit_l.c
        jp2uc.c
        jp2uc.h
        local.h
        toascii.c
        toascii_l.c
        tolower.c
        tolower_l.c
        toupper.c
        toupper_l.c
        towctrans.c
        towctrans_l.c
        towlower.c
        towlower_l.c
        towupper.c
        towupper_l.c
        utf8alpha.h
        utf8print.h
        wctrans.c
        wctrans_l.c
        wctype.c
        wctype_l.c
)
