
add_library(string STATIC "")

target_include_directories(string
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
    PUBLIC
        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/newlib/libc/include>
        $<INSTALL_INTERFACE:include>
)

target_sources(string
    PRIVATE
        bcmp.c
        bcopy.c
        bzero.c
        explicit_bzero.c
        ffsl.c
        ffsll.c
        fls.c
        flsl.c
        flsll.c
        gnu_basename.c
        index.c
        local.h
        memccpy.c
        memchr.c
        memcmp.c
        memcpy.c
        memmem.c
        memmove.c
        mempcpy.c
        memrchr.c
        memset.c
        rawmemchr.c
        rindex.c
        stpcpy.c
        stpncpy.c
        strcasecmp.c
        strcasecmp_l.c
        strcasestr.c
        strcat.c
        strchr.c
        strchrnul.c
        strcmp.c
        strcoll.c
        strcoll_l.c
        strcpy.c
        strcspn.c
        strdup.c
        strdup_r.c
        strerror.c
        strerror_r.c
        strlcat.c
        strlcpy.c
        strlen.c
        strlwr.c
        strncasecmp.c
        strncasecmp_l.c
        strncat.c
        strncmp.c
        strncpy.c
        strndup.c
        strndup_r.c
        strnlen.c
        strnstr.c
        strpbrk.c
        strrchr.c
        strsep.c
        strsignal.c
        strspn.c
        strstr.c
        strtok.c
        strtok_r.c
        str-two-way.h
        strupr.c
        strverscmp.c
        strxfrm.c
        strxfrm_l.c
        swab.c
        timingsafe_bcmp.c
        timingsafe_memcmp.c
        u_strerr.c
        wcpcpy.c
        wcpncpy.c
        wcscasecmp.c
        wcscasecmp_l.c
        wcscat.c
        wcschr.c
        wcscmp.c
        wcscoll.c
        wcscoll_l.c
        wcscpy.c
        wcscspn.c
        wcsdup.c
        wcslcat.c
        wcslcpy.c
        wcslen.c
        wcsncasecmp.c
        wcsncasecmp_l.c
        wcsncat.c
        wcsncmp.c
        wcsncpy.c
        wcsnlen.c
        wcspbrk.c
        wcsrchr.c
        wcsspn.c
        wcsstr.c
        wcstok.c
        wcswidth.c
        wcsxfrm.c
        wcsxfrm_l.c
        wcwidth.c
        wmemchr.c
        wmemcmp.c
        wmemcpy.c
        wmemmove.c
        wmempcpy.c
        wmemset.c
        xpg_strerror_r.c
)
